--- a/code_scrapper.ipynb
+++ b/code_scrapper.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
        "[]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,14 +84,12 @@
     "    method_names = obj.find_all('span', class_=\"expand-control-text\")\n",
     "    language_names = obj.find_all('div', class_=\"codeHeader panelHeader pdl\")\n",
     "    language_examples = obj.find_all('div', class_=\"codeContent panelContent pdl\")\n",
-    "    print('------------------------------------------------------')\n",
-    "    print(len(method_names), len(language_names), len(language_examples))\n",
     "\n",
     "    for methd_name in method_names:\n",
     "        \n",
     "        for language_name, language_example in zip(language_names, language_examples): \n",
     "            if  methd_name.text != 'Expand source':\n",
-    "                method_name = methd_name.text.lower().replace(' ', '_')\n",
+    "                method_name = methd_name.text.lower().replace(' ', '_').replace(',', '')\n",
     "                language_name = language_name.text.replace(' ', '').strip('.x')\n",
     "                language_example = language_example.text\n",
     "\n",
@@ -124,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
