--- a/code_scrapper.ipynb
+++ b/code_scrapper.ipynb
@@ -16,7 +16,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# For api example codes documentation. Ref DATA-5283"
+    "# For api example codes documentation"
    ]
   },
   {
